# sst-hgcc

./: .gitignore  INSTALL.md  Makefile.am  autogen.sh  config.h.in  configure.ac  hg++.in  hgcc.in  hgcclib.py  hgccutils.py  hgccvars.py.in  hgcompile.py  hglink.py  unusedvariablemacro.h
acinclude/: check_clang.m4  check_default_includes.m4  check_gcc.m4  check_python.m4  check_repo_build.m4  check_sst_core.m4  check_sst_elements.m4  check_stl_replacement.m4
clang/: astConsumers.h  astVisitor.cc  astVisitor.h  astVisitorGlobalVars.cc  clangGlobals.h  clangHeaders.h  computePragma.cc  computeVisitor.cc  frontendActions.cc  frontendActions.h  globalVarNamespace.h  main.cc  pragmas.cc  pragmas.h  replacePragma.cc  util.cc  util.h
hgcc_include/libraries/pthread/: hgcc_pthread_spinlock.h
replacement-tests/: build.sh  platform_file_hg_test.py  test_limits.cc  test_limits.py
replacements/: change_mpi_symbols.h  clear_symbol_macros.h  condition_variable  cstdlib  cstring  dlfcn.h  fixIntrinsics.h  fstream  hgcc_pthread_return.h  ios  iostream  istream  list  malloc.h  map  memory  mm_malloc.h  mutex  omp.h  ostream  pthread.h  queue  return_symbol_macros.h  sched.h  set  signal.h  ssthg_pthread_clear.h  ssthg_pthread_clear.h.in  sstream  stack  stdio.h  stdlib.h  string  string.h  thread  time.h  unistd.h  unordered_map  unordered_set  vector
replacements/libraries/: Makefile.am
replacements/libraries/blas/: Makefile.am  blas.h  blas_api.cc  blas_api.h  cblas.cc  cblas.h  daxpy.cc  ddot.cc  dgemm.cc  dgemv.cc
replacements/libraries/machines/: Makefile.am  bgp.cc  bgp.h
replacements/libraries/omp/: Makefile.am  libomp.cc
replacements/libraries/pthread/: Makefile.am  sstmac_sched.cc
replacements/linux/: limits.h
replacements/mpi/: mpi.h
replacements/sys/: cdefs.h  sendfile.h  signal.h  types.h
support/mv2/: gen_register_shim.py  mv2_ld_glibc_stub.c  mv2_mpi_wrappers.c
tests/: Makefile  build.sh  test_hgcompile_ast_smoke.py  test_pthread.cc  test_pthread.py  test_tls.cc  test_tls.py
tests/lit-tests/: .gitignore  README.md  lit.cfg.py  lit.site.cfg.py.in  run-lit.sh
tests/lit-tests/core/: global-var.cc  main-refactor.cc  replacement-header.cc  tls-var.cc
tests/lit-tests/pragmas/: advance_time.cc  assume_false.cc  assume_true.cc  blocking.cc  branch_predict.cc  call.cc  compute.cc  delete.cc  empty.cc  global.cc  init.cc  instead.cc  keep.cc  keep_if.cc  loop_count.cc  malloc.cc  memory.cc  new.cc  nonnull_fields.cc  null_fields.cc  null_ptr.cc  null_type.cc  overhead.cc  replace.cc  return.cc  stack_alloc.cc
tests/mv2/: .gitignore  _mv2_build_common.sh  _mv2_run_common.sh  build_test_mv2_allgather.sh  build_test_mv2_allreduce.sh  build_test_mv2_alltoall.sh  build_test_mv2_barrier.sh  build_test_mv2_bcast.sh  build_test_mv2_gather.sh  build_test_mv2_reduce.sh  build_test_mv2_reduce_scatter.sh  build_test_mv2_scatter.sh  build_test_mv2_sendrecv.sh  collective-run-all.sh  mv2_ld_glibc_stub.c  platform_file_mv2_test.py  register_app.cpp  run_test_mv2_allgather.py  run_test_mv2_allgather.sh  run_test_mv2_allreduce.py  run_test_mv2_allreduce.sh  run_test_mv2_alltoall.py  run_test_mv2_alltoall.sh  run_test_mv2_barrier.py  run_test_mv2_barrier.sh  run_test_mv2_bcast.py  run_test_mv2_bcast.sh  run_test_mv2_gather.py  run_test_mv2_gather.sh  run_test_mv2_reduce.py  run_test_mv2_reduce.sh  run_test_mv2_reduce_scatter.py  run_test_mv2_reduce_scatter.sh  run_test_mv2_scatter.py  run_test_mv2_scatter.sh  run_test_mv2_sendrecv.py  run_test_mv2_sendrecv.sh  test_mv2_allgather.c  test_mv2_allreduce.c  test_mv2_alltoall.c  (+7 more)
tests/replacements/: Makefile  pp.test_change_mpi_symbols.cc  pp.test_cstdlib.cc  test_change_mpi_symbols.cc  test_change_mpi_symbols.py  test_clear_symbol_macros.cc  test_clear_symbol_macros.py  test_cstdlib.cc  test_cstdlib.py  test_cstring.cc  test_cstring.py  test_dlfcn.cc  test_dlfcn.py  test_fixIntrinsics.cc  test_fixIntrinsics.py  test_fstream.cc  test_fstream.py  test_ios.cc  test_ios.py  test_iostream.cc  test_iostream.py  test_istream.cc  test_istream.py  test_limits.cc  test_limits.py  test_list.cc  test_list.py  test_malloc.cc  test_malloc.py  test_map.cc  test_map.py  test_memory.cc  test_memory.py  test_mm_malloc.cc  test_mm_malloc.py  test_mpi.cc  test_mpi.py  test_mutex.cc  test_mutex.py  test_omp.cc  (+39 more)
tests/test-replacements/: test_limits.cc
